--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,11 +3,9 @@ Network:
   lr: 1e-4
   weight_decay: 0
   amsgrad: False
-#  resize_shape: [128,150,180] # d, h, w (training data are also stored in d, h, w)
-#  resize_shape: [100,160,160] # d, h, w (training data are also stored in d, h, w). 100*160*160 = 5.5 GB
-#  resize_shape: [115,180,180] # d, h, w (training data are also stored in d, h, w). 115*180*180 (75% of original) = 6 GB
 #  resize_shape: [24,24,24] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 4.7 GB for 48; 3.4 GB for 24
-  resize_shape: [80,80,80] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 3.4 GB for 24
+#  resize_shape: [80,80,80] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 3.4 GB for 24
+  resize_shape: [130,130,165] # d, h, w (training data are also stored in d, h, w). after cropping.
 augmentation:
   general_spatial_probability: 0.5 # probability of having spatial data augmentation at all
   general_intensity_probability: 0.5 # probability of having intensity data augmentation at all
