--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,8 +22,9 @@ augmentation:
   eladf_control_points: 7
   eladf_max_displacement: 8
   elastic_prob: -1 # probability of having elastic deformation augmentation [DON'T USE FOR BRATS]
-  gamma_range: [0, 0.2] # this number changes beta exponent distribution; don't go more than 0.2
-  gamma_prob: 0.3 # probability of having gamma augmentation
+#  gamma_range: [0, 0.4] # this number changes beta exponent distribution; don't go more than 0.2
+  gamma_range: [0.8, 1.2] # based on own implementation
+  gamma_prob: 0.4 # probability of having gamma augmentation
   mu_AWGN: 0.0 # mean of AWGN
   sigma_AWGN: 0.03 # std of AWGN; don't go more than 0.03
   AWGN_prob: 0.2 # probability of having AWGN augmentation
@@ -44,4 +45,4 @@ file_path: /home/soroosh/Documents/datasets/BraTS20/new_BraTS20/cropped/
 target_dir: /home/soroosh/Documents/Repositories_target_files/federated_he/
 network_save_freq: 10 # based on the batch size, shows the number of epochs done; every half an hour is good
 display_stats_freq: 1 # valid freq is equal to this
-num_epochs: 400
+num_epochs: 200
