--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,12 +3,12 @@ Network:
   lr: 1e-4
   weight_decay: 0
   amsgrad: False
-  image_downsample: True # if we want to downsample the images; otherwise we will crop a patch from images.
-  resize_shape: [24,24,24] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 4.7 GB for 48; 3.4 GB for 24
-#  resize_shape: [80,80,80] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 3.4 GB for 24
+  image_downsample: False # if we want to downsample the images; otherwise we will crop a patch from images.
+  #  resize_shape: [24,24,24] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 4.7 GB for 48; 3.4 GB for 24
+  resize_shape: [80,80,80] # d, h, w (training data are also stored in d, h, w). after cropping. multi mode 4-level. 3.4 GB for 24
 #  resize_shape: [120,120,160] # d, h, w (training data are also stored in d, h, w). keep it dividable by 4; in syft padding is not possible
 augmentation:
-  patch_size: [112, 112, 112] # if we don't use image down sampling, patches of this size will be cropped from original image
+  patch_size: [128, 128, 128] # if we don't use image down sampling, patches of this size will be cropped from original image
   general_spatial_probability: 0.5 # probability of having spatial data augmentation at all
   general_intensity_probability: 0.5 # probability of having intensity data augmentation at all
   lateral_flip_prob: 0.4 # probability of having lateral flipping augmentation
@@ -44,6 +44,6 @@ class_weights: [0.00312639, 0.60484207, 0.05533713, 0.3366944] # for BraTS20
 # changeable items:
 file_path: /home/soroosh/Documents/datasets/BraTS20/new_BraTS20/original/
 target_dir: /home/soroosh/Documents/Repositories_target_files/federated_he/
-network_save_freq: 10 # based on the batch size, shows the number of epochs done; every half an hour is good
+network_save_freq: 200 # based on the batch size, shows the number of epochs done; every half an hour is good
 display_stats_freq: 1 # valid freq is equal to this
 num_epochs: 150
