pathology initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /models/__pycache__/
 /gradient_inversion/.idea/
 /gradient_inversion/results/
+/gradient_inversion/iDLG.py
+/pathology/utils/__pycache__/
+/pathology/data/__pycache__/
+/pathology/__pycache__/
+/pathology/.idea/
+/pathology/config/__pycache__/
