--- a/pathology/config/config.yaml
+++ b/pathology/config/config.yaml
@@ -1,5 +1,6 @@
 Network:
   batch_size: 124
+  QUASAR_deployMSIH_batch_size: 231
   lr: 1e-4
   weight_decay: 0
   amsgrad: False
@@ -12,9 +13,8 @@ trained_model_name: trained_model.pth
 
 
 # changeable items:
-file_path: /home/soroosh/Documents/datasets/Histopathology/soroosh_based/DACHS/
-test_file_path: /home/soroosh/Documents/datasets/Histopathology/soroosh_based/test/QUASAR_deployMSIH/feature_labels/
+file_path: /home/soroosh/Documents/datasets/Histopathology/soroosh_based/
 target_dir: /home/soroosh/Documents/Repositories_target_files/federated_he/pathology/
-network_save_freq: 200 # based on the batch size, shows the number of epochs done; every half an hour is good
-display_stats_freq: 1 # valid freq is equal to this
+network_save_freq: 25 # based on the batch size, shows the number of epochs done; every half an hour is good
+display_stats_freq: 1 # valid freq is equal to this [MUST be 1 for this project]
 num_epochs: 50
