--- a/pathology/config/config.yaml
+++ b/pathology/config/config.yaml
@@ -12,8 +12,8 @@ trained_model_name: trained_model.pth
 
 
 # changeable items:
-file_path: /home/soroosh/Documents/datasets/Histopathology/soroosh_based/
-target_dir: /home/soroosh/Documents/Repositories_target_files/federated_he/pathology/
+file_path: /PATH TO DATASET/
+target_dir: /WHERE YOU WANT TO STORE YOUR EXPERIMENTS/
 network_save_freq: 1 # shows the number of epochs done
 display_stats_freq: 1 # valid freq is equal to this [MUST be 1 for this project]
 num_epochs: 100
