--- a/config/config.yaml
+++ b/config/config.yaml
@@ -42,8 +42,8 @@ class_weights: [0.00312639, 0.60484207, 0.05533713, 0.3366944] # for BraTS20
 
 
 # changeable items:
-file_path: /home/soroosh/Documents/datasets/BraTS20/new_BraTS20/original/
-target_dir: /home/soroosh/Documents/Repositories_target_files/federated_he/
+file_path: /PATH TO DATASET/
+target_dir: /WHERE YOU WANT TO STORE YOUR EXPERIMENTS/
 network_save_freq: 200 # based on the batch size, shows the number of epochs done; every half an hour is good
 display_stats_freq: 1 # valid freq is equal to this
 num_epochs: 150
